feat: update footer links, enhance contact details, and improve error handling page

--- a/contact.html
+++ b/contact.html
@@ -308,7 +308,9 @@
           <div class="contact-card">
             <i class="fa-solid fa-phone"></i>
             <h3>Phone</h3>
-            <p><a href="tel:+911234567890">+91 1234567890</a></p>
+            <p>
+              <a href="tel:+911234567890">+91 9508957641</a>
+            </p>
             <span>Mon–Sat (10am – 7pm)</span>
           </div>
 
@@ -326,7 +328,10 @@
           <div class="contact-card">
             <i class="fa-solid fa-location-dot"></i>
             <h3>Office</h3>
-            <p>Stesalit Tower, Sector V, Kolkata</p>
+            <p>
+              GP Block, Salt Lake Sec-5, Near Webel Bhawan, Kolkata, West
+              Bengal. (700091)
+            </p>
             <span>Visit with prior appointment</span>
           </div>
 
@@ -347,10 +352,18 @@
           <h2>Connect With Us Online</h2>
           <div class="social-links-large">
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a
+              target="_blank"
+              href="https://www.facebook.com/profile.php?id=61581851137984"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            <a
+              target="_blank"
+              href="https://www.youtube.com/channel/UCrPybIEznZHs7MDvbPAqNRw"
+              ><i class="fa-brands fa-youtube"></i
+            ></a>
           </div>
         </div>
       </section>
