--- a/error.html
+++ b/error.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>We'll Be Back Soon!</title>
+    <title>Service Temporarily Unavailable</title>
 
     <style>
       * {
@@ -73,7 +73,6 @@
         }
       }
 
-      /* Extra fine-tuning for very small devices */
       @media (max-width: 360px) {
         .container {
           padding: 22px;
@@ -88,16 +87,21 @@
 
   <body>
     <div class="container">
-      <div class="emoji">🚧🛠️</div>
-      <h1>Oops! Site Under Construction</h1>
+      <div class="emoji">⚠️🚧</div>
+      <h1>Service Temporarily Unavailable</h1>
+
       <p>
-        We’re currently busy making this website smarter, faster, and way better
-        looking.
+        This service is currently <strong>intentionally disabled</strong> as the
+        service page is still being prepared.
       </p>
+
       <p>
-        It’s not broken it’s just evolving 🐛➡️🦋 Please check back in a bit!
+        We’re working to ensure everything is properly configured and ready
+        before making it available. Once completed, the service will be enabled
+        without disruption.
       </p>
-      <div class="tag">Back soon. Promise! 🚀</div>
+
+      <div class="tag">Please check back soon 🚀</div>
     </div>
   </body>
 </html>
