--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                   >
                 </li>
                 <li>
-                  <a href="./serviceInfo.html?id=govt-more">See More...</a>
+                  <a href="service.html">See More...</a>
                 </li>
               </ul>
             </div>
