this soumya commit about page change and small contact details

--- a/jobs.html
+++ b/jobs.html
@@ -384,13 +384,13 @@
           <div class="footer-col">
             <h4>Contact</h4>
             <ul class="contact-info">
-              <li><a href="tel:+91123654789">+91 123654789</a></li>
+              <li><a href="tel:+919508957641">+91 9508957641</a></li>
               <li>
                 <a href="mailto:info@domainname.com">info@domainname.com</a>
               </li>
               <li>
-                <a href="https://goo.gl/maps/XYZ" target="_blank"
-                  >520, West Valley, Amin and Minim</a
+                <a href="https://www.google.com/maps/place/Stesalit+Tower,+GP+Block,+Sector+V,+Bidhannagar,+West+Bengal+700091/@22.5690784,88.4331871,766m/data=!3m2!1e3!4b1!4m6!3m5!1s0x3a0275abf4cadad9:0x617148c6351331b6!8m2!3d22.5691801!4d88.4356179!16s%2Fg%2F11lsnglw1z?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank"
+                  >GP Block, Salt Lake Sec-5, Near Webel Bhawan, Kolkata, West Bengal 700091</a
                 >
               </li>
             </ul>
