--- a/index.html
+++ b/index.html
@@ -564,43 +564,43 @@
             </div>
             <div class="services-grid">
               <!-- Govt Services -->
-              <a href="#" class="service-card">
+              <div class="service-card">
                 <div class="icon"><i class="fas fa-id-card"></i></div>
                 <h3>Government Services</h3>
                 <p>
                   Streamline access to Aadhaar, PAN, voter ID, and essential
                   government solutions all in one place.
                 </p>
-              </a>
+              </div>
 
               <!-- Tech Services -->
-              <a href="#" class="service-card">
+              <div class="service-card">
                 <div class="icon"><i class="fas fa-laptop-code"></i></div>
                 <h3>Technology Solutions</h3>
                 <p>
                   From web and app development to cloud integration, we build
                   future-ready digital infrastructures.
                 </p>
-              </a>
+              </div>
 
               <!-- Promotional Services -->
-              <a href="#" class="service-card">
+              <div class="service-card">
                 <div class="icon"><i class="fas fa-bullhorn"></i></div>
                 <h3>Promotional Services</h3>
                 <p>
                   Enhance your brand reach through social media campaigns,
                   online ads, and strategic digital marketing.
                 </p>
-              </a>
+              </div>
 
               <!-- Other Services -->
-              <a href="#" class="service-card">
+              <div class="service-card">
                 <div class="icon"><i class="fas fa-palette"></i></div>
                 <h3>Creative & Design</h3>
-                <p>
+                <>
                   Offering graphic design, UI/UX, logo design, and visual
                   identity services to make your brand stand out.
-                </p>
+              </div>
               </a>
             </div>
           </div>
@@ -1175,7 +1175,7 @@
           autoplayTimeout: 4000,
           autoplayHoverPause: true,
           dots: true,
-          nav: false,
+          nav: true,
           smartSpeed: 800,
         });
 
