--- a/job_des.html
+++ b/job_des.html
@@ -288,13 +288,7 @@
     </section>
 
     <!-- Banner -->
-    <section
-      class="job-banner"
-      style="
-        background-image: url('images/career/career-5.jpg');
-        background-attachment: scroll;
-      "
-    >
+    <section class="job-banner">
       <div class="container">
         <div class="banner-content">
           <h1 id="jobTitle">Loading...</h1>
@@ -562,8 +556,11 @@
                 <a href="mailto:info@domainname.com">info@domainname.com</a>
               </li>
               <li>
-                <a href="https://www.google.com/maps/place/Stesalit+Tower,+GP+Block,+Sector+V,+Bidhannagar,+West+Bengal+700091/@22.5690784,88.4331871,766m/data=!3m2!1e3!4b1!4m6!3m5!1s0x3a0275abf4cadad9:0x617148c6351331b6!8m2!3d22.5691801!4d88.4356179!16s%2Fg%2F11lsnglw1z?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank"
-                  >GP Block, Salt Lake Sec-5, Near Webel Bhawan, Kolkata, West Bengal 700091</a
+                <a
+                  href="https://www.google.com/maps/place/Stesalit+Tower,+GP+Block,+Sector+V,+Bidhannagar,+West+Bengal+700091/@22.5690784,88.4331871,766m/data=!3m2!1e3!4b1!4m6!3m5!1s0x3a0275abf4cadad9:0x617148c6351331b6!8m2!3d22.5691801!4d88.4356179!16s%2Fg%2F11lsnglw1z?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+                  target="_blank"
+                  >GP Block, Salt Lake Sec-5, Near Webel Bhawan, Kolkata, West
+                  Bengal 700091</a
                 >
               </li>
             </ul>
@@ -575,6 +572,11 @@
         <p>&copy; 2025 IT-Wings Webtech Solutions. All Rights Reserved.</p>
       </div>
     </footer>
+
+    <!-- scroll to top -->
+    <div class="uppper-up-btn">
+      <a href="#" id="scrollBtn"><i class="fa-solid fa-arrow-up"></i></a>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script>
@@ -645,7 +647,7 @@
           // ✅ Skills
           document.getElementById("skills").innerHTML = job.skillset
             ?.map((s) => `<span>${s}</span>`)
-            .join(" ");
+            .join(", ");
         } catch (error) {
           console.error("Error fetching job:", error);
         }
