fix: update client names and images in testimonials, adjust job banner background

--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
                     <img src="images/l1.png" alt="Client 1" />
                   </figure>
                   <div class="client-info">
-                    <h3>Rahul Sharma</h3>
+                    <h3>Priya Sharma</h3>
                     <span>CEO, NextGen Systems</span>
                   </div>
                 </div>
@@ -953,7 +953,7 @@
                     <img src="images/l2.png" alt="Client 2" />
                   </figure>
                   <div class="client-info">
-                    <h3>Priya Mehta</h3>
+                    <h3>Stifen Jones</h3>
                     <span>CTO, FinTech Hive</span>
                   </div>
                 </div>
