--- a/serviceInfo.html
+++ b/serviceInfo.html
@@ -518,10 +518,10 @@
                 </div>
                 <div class="testimonial-client">
                   <figure>
-                    <img src="images/testimonials/client1.jpg" alt="Client 1" />
+                    <img src="images/l1.png" alt="Client 1" />
                   </figure>
                   <div class="client-info">
-                    <h3>Rahul Sharma</h3>
+                    <h3>Priya Sharma</h3>
                     <span>CEO, NextGen Systems</span>
                   </div>
                 </div>
@@ -538,10 +538,10 @@
                 </div>
                 <div class="testimonial-client">
                   <figure>
-                    <img src="images/testimonials/client2.jpg" alt="Client 2" />
+                    <img src="images/l2.png" alt="Client 2" />
                   </figure>
                   <div class="client-info">
-                    <h3>Priya Mehta</h3>
+                    <h3>Stifen Jones</h3>
                     <span>CTO, FinTech Hive</span>
                   </div>
                 </div>
@@ -558,10 +558,10 @@
                 </div>
                 <div class="testimonial-client">
                   <figure>
-                    <img src="images/testimonials/client3.jpg" alt="Client 3" />
+                    <img src="images/l3.png" alt="Client 3" />
                   </figure>
                   <div class="client-info">
-                    <h3>James Wilson</h3>
+                    <h3>Jenny Wilson</h3>
                     <span>Marketing Head, CloudCore Inc.</span>
                   </div>
                 </div>
@@ -643,8 +643,11 @@
                 <a href="mailto:info@domainname.com">info@domainname.com</a>
               </li>
               <li>
-                <a href="https://www.google.com/maps/place/Stesalit+Tower,+GP+Block,+Sector+V,+Bidhannagar,+West+Bengal+700091/@22.5690784,88.4331871,766m/data=!3m2!1e3!4b1!4m6!3m5!1s0x3a0275abf4cadad9:0x617148c6351331b6!8m2!3d22.5691801!4d88.4356179!16s%2Fg%2F11lsnglw1z?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank"
-                  >GP Block, Salt Lake Sec-5, Near Webel Bhawan, Kolkata, West Bengal 700091</a
+                <a
+                  href="https://www.google.com/maps/place/Stesalit+Tower,+GP+Block,+Sector+V,+Bidhannagar,+West+Bengal+700091/@22.5690784,88.4331871,766m/data=!3m2!1e3!4b1!4m6!3m5!1s0x3a0275abf4cadad9:0x617148c6351331b6!8m2!3d22.5691801!4d88.4356179!16s%2Fg%2F11lsnglw1z?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+                  target="_blank"
+                  >GP Block, Salt Lake Sec-5, Near Webel Bhawan, Kolkata, West
+                  Bengal 700091</a
                 >
               </li>
             </ul>
