--- a/request.html
+++ b/request.html
@@ -240,10 +240,6 @@
     <!-- ===== Main Request Section ===== -->
     <main class="request-section">
       <section class="request-container">
-        <div class="back-btn">
-          <a href="index.html"><i class="fa-solid fa-arrow-left"></i> BACK</a>
-        </div>
-
         <div class="request-content">
           <!-- LEFT: FORM -->
           <div class="form-left">
@@ -279,84 +275,84 @@
               </div>
 
               <div class="form-row">
-  <div class="form-group">
-    <label>Region*</label>
-    <select name="region" required>
-      <option value="">Select Region</option>
-      <option value="Africa">Africa</option>
-      <option value="Asia">Asia</option>
-      <option value="Europe">Europe</option>
-      <option value="North America">North America</option>
-      <option value="South America">South America</option>
-      <option value="Oceania">Oceania</option>
-      <option value="Middle East">Middle East</option>
-      <option value="Caribbean">Caribbean</option>
-      <option value="Central America">Central America</option>
-    </select>
-  </div>
-</div>
+                <div class="form-group">
+                  <label>Region*</label>
+                  <select name="region" required>
+                    <option value="">Select Region</option>
+                    <option value="Africa">Africa</option>
+                    <option value="Asia">Asia</option>
+                    <option value="Europe">Europe</option>
+                    <option value="North America">North America</option>
+                    <option value="South America">South America</option>
+                    <option value="Oceania">Oceania</option>
+                    <option value="Middle East">Middle East</option>
+                    <option value="Caribbean">Caribbean</option>
+                    <option value="Central America">Central America</option>
+                  </select>
+                </div>
+              </div>
 
-<div class="form-group">
-  <label>Industry*</label>
-  <select name="industry" required>
-    <option value="">Select Industry</option>
+              <div class="form-group">
+                <label>Industry*</label>
+                <select name="industry" required>
+                  <option value="">Select Industry</option>
 
-    <option value="Information Technology">Information Technology (IT)</option>
-    <option value="Software Development">Software Development</option>
-    <option value="Finance">Finance</option>
-    <option value="Banking">Banking</option>
-    <option value="Insurance">Insurance</option>
-    <option value="Healthcare">Healthcare</option>
-    <option value="Pharmaceuticals">Pharmaceuticals</option>
-    <option value="Biotechnology">Biotechnology</option>
+                  <option value="Information Technology">Information Technology (IT)</option>
+                  <option value="Software Development">Software Development</option>
+                  <option value="Finance">Finance</option>
+                  <option value="Banking">Banking</option>
+                  <option value="Insurance">Insurance</option>
+                  <option value="Healthcare">Healthcare</option>
+                  <option value="Pharmaceuticals">Pharmaceuticals</option>
+                  <option value="Biotechnology">Biotechnology</option>
 
-    <option value="Education">Education</option>
-    <option value="E-Learning">E-Learning</option>
-    <option value="Research & Development">Research & Development</option>
+                  <option value="Education">Education</option>
+                  <option value="E-Learning">E-Learning</option>
+                  <option value="Research & Development">Research & Development</option>
 
-    <option value="Manufacturing">Manufacturing</option>
-    <option value="Automobile">Automobile</option>
-    <option value="Electronics">Electronics</option>
-    <option value="Industrial Engineering">Industrial Engineering</option>
+                  <option value="Manufacturing">Manufacturing</option>
+                  <option value="Automobile">Automobile</option>
+                  <option value="Electronics">Electronics</option>
+                  <option value="Industrial Engineering">Industrial Engineering</option>
 
-    <option value="Telecommunications">Telecommunications</option>
-    <option value="Networking">Networking</option>
+                  <option value="Telecommunications">Telecommunications</option>
+                  <option value="Networking">Networking</option>
 
-    <option value="Retail">Retail</option>
-    <option value="E-Commerce">E-Commerce</option>
-    <option value="Supply Chain & Logistics">Supply Chain & Logistics</option>
+                  <option value="Retail">Retail</option>
+                  <option value="E-Commerce">E-Commerce</option>
+                  <option value="Supply Chain & Logistics">Supply Chain & Logistics</option>
 
-    <option value="Construction">Construction</option>
-    <option value="Real Estate">Real Estate</option>
-    <option value="Architecture">Architecture</option>
+                  <option value="Construction">Construction</option>
+                  <option value="Real Estate">Real Estate</option>
+                  <option value="Architecture">Architecture</option>
 
-    <option value="Media & Entertainment">Media & Entertainment</option>
-    <option value="Advertising & Marketing">Advertising & Marketing</option>
-    <option value="Digital Marketing">Digital Marketing</option>
+                  <option value="Media & Entertainment">Media & Entertainment</option>
+                  <option value="Advertising & Marketing">Advertising & Marketing</option>
+                  <option value="Digital Marketing">Digital Marketing</option>
 
-    <option value="Energy & Utilities">Energy & Utilities</option>
-    <option value="Oil & Gas">Oil & Gas</option>
-    <option value="Renewable Energy">Renewable Energy</option>
+                  <option value="Energy & Utilities">Energy & Utilities</option>
+                  <option value="Oil & Gas">Oil & Gas</option>
+                  <option value="Renewable Energy">Renewable Energy</option>
 
-    <option value="Agriculture">Agriculture</option>
-    <option value="Food & Beverage">Food & Beverage</option>
+                  <option value="Agriculture">Agriculture</option>
+                  <option value="Food & Beverage">Food & Beverage</option>
 
-    <option value="Travel & Tourism">Travel & Tourism</option>
-    <option value="Hospitality">Hospitality</option>
+                  <option value="Travel & Tourism">Travel & Tourism</option>
+                  <option value="Hospitality">Hospitality</option>
 
-    <option value="Legal Services">Legal Services</option>
-    <option value="Consulting">Consulting</option>
-    <option value="Human Resources">Human Resources</option>
+                  <option value="Legal Services">Legal Services</option>
+                  <option value="Consulting">Consulting</option>
+                  <option value="Human Resources">Human Resources</option>
 
-    <option value="Government & Public Sector">Government & Public Sector</option>
-    <option value="Defense">Defense</option>
-    <option value="Non-Profit / NGO">Non-Profit / NGO</option>
+                  <option value="Government & Public Sector">Government & Public Sector</option>
+                  <option value="Defense">Defense</option>
+                  <option value="Non-Profit / NGO">Non-Profit / NGO</option>
 
-    <option value="Sports & Fitness">Sports & Fitness</option>
-    <option value="Fashion & Apparel">Fashion & Apparel</option>
-    <option value="Textile">Textile</option>
-  </select>
-</div>
+                  <option value="Sports & Fitness">Sports & Fitness</option>
+                  <option value="Fashion & Apparel">Fashion & Apparel</option>
+                  <option value="Textile">Textile</option>
+                </select>
+              </div>
 
               <div class="form-group full-width">
                 <label>How can we help you?*</label>
@@ -516,7 +512,7 @@
 
     <script>
       (function () {
-        emailjs.init("fcVMLufiDuAJCzNbz"); // 🔑 from EmailJS dashboard
+        emailjs.init("fcVMLufiDuAJCzNbz");
       })();
     </script>
 
@@ -528,9 +524,6 @@
 
     <!-- Toastify JS -->
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-
-    <!-- Your main.js -->
-    <script src="js/main.js"></script>
 
     <!-- ========================= -->
     <!-- ⭐ FORM VALIDATION + TOAST -->
@@ -602,5 +595,7 @@
           });
       });
     </script>
+    <!-- Your main.js -->
+    <script src="js/main.js"></script>
   </body>
 </html>
