fix: replace JPG images with WEBP format for improved performance and update background images in HTML files

--- a/about.html
+++ b/about.html
@@ -540,7 +540,7 @@
         <div class="container edu-wrapper">
           <!-- LEFT CONTENT -->
           <div class="edu-image">
-            <img src="images/career/career-2.jpg" alt="Education System" />
+            <img src="images/career/career-2.webp" alt="Education System" />
           </div>
 
           <!-- RIGHT IMAGE -->
