--- a/career.html
+++ b/career.html
@@ -299,7 +299,7 @@
 
         <div class="card-container">
           <div class="card">
-            <img src="images/career/c1.jpg" alt="Benefits and beyond" />
+            <img src="images/career/c1.webp" alt="Benefits and beyond" />
             <h3>Growth With Purpose</h3>
             <p>
               We empower our people to explore, experiment, and excel in an
@@ -308,7 +308,7 @@
           </div>
 
           <div class="card">
-            <img src="images/career/c2.jpg" alt="Initiatives" />
+            <img src="images/career/c2.webp" alt="Initiatives" />
             <h3>Driven By Impact</h3>
             <p>
               Every project we undertake is fueled by a commitment to create
@@ -317,7 +317,7 @@
           </div>
 
           <div class="card">
-            <img src="images/career/c3.jpg" alt="Culture" />
+            <img src="images/career/c3.webp" alt="Culture" />
             <h3>Inclusive & Collaborative Culture</h3>
             <p>
               We celebrate diversity, encourage creativity, and value
@@ -331,7 +331,7 @@
       <section class="people-section">
         <div class="people-container">
           <div class="people-image">
-            <img src="images/career/c4.jpg" alt="Our people" />
+            <img src="images/career/c4.webp" alt="Our people" />
           </div>
 
           <div class="people-content">
@@ -344,8 +344,8 @@
             </p>
 
             <div class="button-group">
-              <a href="#" class="btn">Meet Our Team</a>
-              <a href="#" class="btn">Our Mission</a>
+              <a href="./about.html" class="btn">Meet Our Team</a>
+              <a href="./about.html" class="btn">Our Mission</a>
             </div>
           </div>
         </div>
@@ -356,7 +356,7 @@
         <div class="container edu-wrapper">
           <!-- LEFT CONTENT -->
           <div class="edu-image">
-            <img src="images/career/career-2.jpg" alt="Education System" />
+            <img src="images/career/career-2.webp" alt="Education System" />
           </div>
 
           <!-- RIGHT IMAGE -->
@@ -465,8 +465,11 @@
                 <a href="mailto:info@domainname.com">info@domainname.com</a>
               </li>
               <li>
-                <a href="https://www.google.com/maps/place/Stesalit+Tower,+GP+Block,+Sector+V,+Bidhannagar,+West+Bengal+700091/@22.5690784,88.4331871,766m/data=!3m2!1e3!4b1!4m6!3m5!1s0x3a0275abf4cadad9:0x617148c6351331b6!8m2!3d22.5691801!4d88.4356179!16s%2Fg%2F11lsnglw1z?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank"
-                  >GP Block, Salt Lake Sec-5, Near Webel Bhawan, Kolkata, West Bengal 700091</a
+                <a
+                  href="https://www.google.com/maps/place/Stesalit+Tower,+GP+Block,+Sector+V,+Bidhannagar,+West+Bengal+700091/@22.5690784,88.4331871,766m/data=!3m2!1e3!4b1!4m6!3m5!1s0x3a0275abf4cadad9:0x617148c6351331b6!8m2!3d22.5691801!4d88.4356179!16s%2Fg%2F11lsnglw1z?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+                  target="_blank"
+                  >GP Block, Salt Lake Sec-5, Near Webel Bhawan, Kolkata, West
+                  Bengal 700091</a
                 >
               </li>
             </ul>
