--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <!-- ===== Banner 1: Info ===== -->
         <div
           class="banner-slide"
-          style="background-image: url('images/landing/home-1.jpg')"
+          style="background-image: url('images/landing/home-1.webp')"
         >
           <div class="overlay"></div>
           <div class="banner-content">
@@ -255,7 +255,7 @@
         <!-- ===== Banner 2: Services ===== -->
         <div
           class="banner-slide"
-          style="background-image: url('images/landing/home-2.jpg')"
+          style="background-image: url('images/landing/home-2.webp')"
         >
           <div class="overlay"></div>
           <div class="banner-content">
@@ -271,7 +271,7 @@
         <!-- ===== Banner 3: Learning Platform ===== -->
         <div
           class="banner-slide"
-          style="background-image: url('images/landing/home-3.jpg')"
+          style="background-image: url('images/landing/home-3.webp')"
         >
           <div class="overlay"></div>
           <div class="banner-content">
@@ -292,7 +292,7 @@
         <!-- ===== Banner 4: Career ===== -->
         <div
           class="banner-slide"
-          style="background-image: url('images/career-4.jpg')"
+          style="background-image: url('images/landing/home-4.webp')"
         >
           <div class="overlay"></div>
           <div class="banner-content">
@@ -327,7 +327,7 @@
               <!-- Left Image -->
               <div class="intro-image">
                 <figure>
-                  <img src="images/career-1.jpg" alt="IT Services" />
+                  <img src="images/landing/career-1.jpg" alt="IT Services" />
                 </figure>
               </div>
 
@@ -624,10 +624,10 @@
               <div class="image-column">
                 <div class="upper-img-wrapper">
                   <figure>
-                    <img src="images/career-1.jpg" alt="home-section-five-1" />
+                    <img src="images/landing/career-1.jpg" alt="home-section-five-1" />
                   </figure>
                   <figure class="last-img">
-                    <img src="images/career-2.jpg" alt="home-section-five-2" />
+                    <img src="images/landing/career-2.jpg" alt="home-section-five-2" />
                   </figure>
                 </div>
               </div>
@@ -639,7 +639,7 @@
             <div class="bottom-wrapper d-flex jc-between">
               <div class="bottom-left">
                 <figure>
-                  <img src="images/career-3.jpg" alt="our-story" />
+                  <img src="images/landing/career-3.jpg" alt="our-story" />
                 </figure>
               </div>
 
@@ -721,7 +721,7 @@
 
           <!-- RIGHT IMAGE -->
           <div class="join-image">
-            <img src="images/career/career-1.jpg" alt="Join Our Team" />
+            <img src="images/landing/team.webp" alt="Join Our Team" />
           </div>
         </div>
       </section>
@@ -731,7 +731,7 @@
         <div class="container edu-wrapper">
           <!-- LEFT CONTENT -->
           <div class="edu-image">
-            <img src="images/career/career-2.jpg" alt="Education System" />
+            <img src="images/landing/education.webp" alt="Education System" />
           </div>
 
           <!-- RIGHT IMAGE -->
