--- a/job_des.html
+++ b/job_des.html
@@ -288,7 +288,7 @@
     </section>
 
     <!-- Banner -->
-    <section class="job-banner" style="background-image: url(images/career/career-5.jpg);"">
+    <section class="job-banner" style="background-image: url(images/career/career-5.webp);"">
       <div class="container">
         <div class="banner-content">
           <h1 id="jobTitle">Loading...</h1>
